{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 25,
  "lineage": "f23839f8-844b-8f2d-a51a-05d247e13d2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "linux-eip-centos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09adbd92ed22e7182",
            "domain": "vpc",
            "id": "eipalloc-09adbd92ed22e7182",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-231-246-120.compute-1.amazonaws.com",
            "public_ip": "34.231.246.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "task3-centos-CentOS-linux-eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "task3-centos-CentOS-linux-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "linux-eip-ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0992de7e5224c9ad1",
            "domain": "vpc",
            "id": "eipalloc-0992de7e5224c9ad1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-231-126-137.compute-1.amazonaws.com",
            "public_ip": "34.231.126.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-linux-eip"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-linux-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "centos-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09733ae7501b55ec1",
            "arn": "arn:aws:ec2:us-east-1:358921324480:instance/i-0f6743ed2711e2203",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6743ed2711e2203",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3-centos-centos-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a60e9bf9c68bfc45",
            "private_dns": "ip-10-11-1-43.ec2.internal",
            "private_ip": "10.11.1.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01148d7e4bb8535c7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0832ca5e52c03bd6d",
            "tags": {
              "Environment": "test",
              "Name": "task3-centos-CentOS-linux-server"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "task3-centos-CentOS-linux-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f6a123638153061a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_centos",
            "aws_security_group.aws-centos-sg",
            "aws_subnet.public-subnet",
            "data.aws_ami.centos-9",
            "tls_private_key.key_pair_centos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031cf125b681ca3e0",
            "arn": "arn:aws:ec2:us-east-1:358921324480:instance/i-021869411ba72d876",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021869411ba72d876",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sanbox-test-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05ba587b3e930ac4e",
            "private_dns": "ip-10-11-1-82.ec2.internal",
            "private_ip": "10.11.1.82",
            "public_dns": "ec2-18-206-223-100.compute-1.amazonaws.com",
            "public_ip": "18.206.223.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013f494c7260fd4bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0832ca5e52c03bd6d",
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-linux-server"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-linux-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d74ca50085d9d792"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair_ubuntu",
            "aws_security_group.aws-ubuntu-sg",
            "aws_subnet.public-subnet",
            "data.aws_ami.ubuntu-linux-2004",
            "tls_private_key.key_pair_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358921324480:internet-gateway/igw-02b7633a6d767e555",
            "id": "igw-02b7633a6d767e555",
            "owner_id": "358921324480",
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-igw"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-igw"
            },
            "vpc_id": "vpc-0f309af2a1075c852"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358921324480:route-table/rtb-0ec2370f3dfa74ee2",
            "id": "rtb-0ec2370f3dfa74ee2",
            "owner_id": "358921324480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b7633a6d767e555",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-public-subnet-rt"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-public-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f309af2a1075c852"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058e07f282a3ed0d9",
            "route_table_id": "rtb-0ec2370f3dfa74ee2",
            "subnet_id": "subnet-0832ca5e52c03bd6d"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-centos-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358921324480:security-group/sg-0f6a123638153061a",
            "description": "Allow incoming HTTP connections",
            "egress": [
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0f6a123638153061a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.11.1.0/24"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task3-centos-CentOS-linux-sg",
            "name_prefix": "",
            "owner_id": "358921324480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "task3-centos-CentOS-linux-sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "task3-centos-CentOS-linux-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f309af2a1075c852"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-ubuntu-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358921324480:security-group/sg-0d74ca50085d9d792",
            "description": "Allow incoming HTTP connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d74ca50085d9d792",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sanbox-test-linux-sg",
            "name_prefix": "",
            "owner_id": "358921324480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-linux-sg"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-linux-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f309af2a1075c852"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358921324480:subnet/subnet-0832ca5e52c03bd6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0832ca5e52c03bd6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "358921324480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-public-subnet"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-public-subnet"
            },
            "vpc_id": "vpc-0f309af2a1075c852"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358921324480:vpc/vpc-0f309af2a1075c852",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0453b0e99a368c5e6",
            "default_route_table_id": "rtb-0abf3f539c5086d51",
            "default_security_group_id": "sg-0f0795d44a26d6251",
            "dhcp_options_id": "dopt-0cbbb67cf3440604d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f309af2a1075c852",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abf3f539c5086d51",
            "owner_id": "358921324480",
            "tags": {
              "Environment": "test",
              "Name": "sanbox-test-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "sanbox-test-vpc"
            }
          }
        }
      ]
    }
  ]
}